# ECS-first-aproach

./: CMakeLists.txt  README.md
src/: main.cpp
src/Engine/: Engine.cpp  Engine.hpp
src/Engine/ECS/Component/: DrawableComponents.cpp  DrawableComponents.hpp  IComponent.cpp  IComponent.hpp  LogicComponents.cpp  LogicComponents.hpp
src/Engine/ECS/Entity/: Entity.cpp  Entity.hpp
src/Engine/ECS/System/: CollisionSystem.cpp  CollisionSystem.hpp  ISystem.cpp  ISystem.hpp  InputSystem.cpp  InputSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/Engine/Managers/: EntityManager.cpp  EntityManager.hpp  EntityManagerImp.hpp  EntityManagerImpl.hpp  SystemManager.cpp  SystemManager.hpp  SystemManagerImp.hpp
src/Engine/Utils/: Common.hpp
src/Engine/Utils/Allocators/: LinealAllocator.cpp  LinealAllocator.hpp  LinealAllocatorImpl.hpp  StaticAllocator.hpp  StaticVectorAllocator.cpp  StaticVectorAllocator.hpp
src/Engine/Utils/SmartPointer/: ScopePointer.cpp  ScopePointer.hpp  ScopePointerImpl.hpp  SmartPointer.cpp
